--- a/ci/docker/toolchain/Dockerfile
+++ b/ci/docker/toolchain/Dockerfile
@@ -5,24 +5,24 @@ FROM ubuntu:latest AS env
 ENV PATH=/usr/local/bin:$PATH
 RUN apt-get update -qq \
 && DEBIAN_FRONTEND=noninteractive apt-get install -yq git wget libssl-dev build-essential \
- ninja-build python3 pkgconf libglib2.0-dev \
+ ninja-build python3 python3-venv pkgconf libglib2.0-dev \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ENTRYPOINT ["/usr/bin/bash", "-c"]
 CMD ["/usr/bin/bash"]
 
-# Install CMake 3.25.2
-RUN wget "https://cmake.org/files/v3.25/cmake-3.25.2-linux-x86_64.sh" \
-&& chmod a+x cmake-3.25.2-linux-x86_64.sh \
-&& ./cmake-3.25.2-linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.25.2-linux-x86_64.sh
+# Install CMake 3.28.3
+RUN wget "https://cmake.org/files/v3.28/cmake-3.28.3-linux-x86_64.sh" \
+&& chmod a+x cmake-3.28.3-linux-x86_64.sh \
+&& ./cmake-3.28.3-linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.28.3-linux-x86_64.sh
 
 FROM env AS devel
 WORKDIR /home/project
 COPY . .
 
 ARG TARGET
-ENV TARGET ${TARGET:-unknown}
+ENV TARGET=${TARGET:-unknown}
 
 FROM devel AS build
 RUN cmake --version
