--- a/.github/workflows/amd64_docker.yml
+++ b/.github/workflows/amd64_docker.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distro: [alpine, archlinux, centos, debian, fedora, opensuse, ubuntu]
+        distro: [almalinux, alpine, archlinux, debian, fedora, opensuse, rockylinux, ubuntu]
       fail-fast: false
     env:
       DISTRO: amd64_${{ matrix.distro }}
