--- a/ci/docker/almalinux/Dockerfile
+++ b/ci/docker/almalinux/Dockerfile
@@ -1,6 +1,6 @@
 # Create a virtual environment with all tools installed
-# ref: https://quay.io/repository/centos/centos
-FROM quay.io/centos/centos:stream AS env
+# ref: https://hub.docker.com/_/almalinux
+FROM almalinux:latest AS env
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
@@ -16,7 +16,7 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
-RUN cmake -version
+RUN cmake --version
 RUN cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
 RUN cmake --build build --target all -v
 RUN cmake --build build --target install -v
