--- a/.github/workflows/mips_toolchain.yml
+++ b/.github/workflows/mips_toolchain.yml
@@ -2,27 +2,30 @@ name: mips Toolchain
 
 on: [push, pull_request, workflow_dispatch]
 
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
   mips:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         targets: [
           # https://go.dev/doc/install/source#environment
-          [mips], # OCI alias
-          [mipsle], # OCI alias
-          [mips32-r6],
-          [mips32el-r6],
-          [mips32-r2],
-          [mips32el-r2],
+          mips, # alias to mips32-r6
+          mipsle, # alias to mips32el-r6
+          mips32-r6, # codespace
+          mips32el-r6, # codespace
+          mips32-r2, # codespace
+          mips32el-r2, # codespace
         ]
       fail-fast: false
-    env:
-      TARGET: ${{ matrix.targets[0] }}
+    name: Linux • Toolchain ${{ matrix.targets }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: make --directory=ci ${TARGET}_build
-    - name: Test
-      run: make --directory=ci ${TARGET}_test
+    - name: Build env stage
+      run: make --directory=ci ${{ matrix.targets }}_env
+    - name: Build devel stage
+      run: make --directory=ci ${{ matrix.targets }}_devel
+    - name: Build build stage
+      run: make --directory=ci ${{ matrix.targets }}_build
+    - name: Build Test stage
+      run: make --directory=ci ${{ matrix.targets }}_test
