--- a/.github/workflows/arm_toolchain.yml
+++ b/.github/workflows/arm_toolchain.yml
@@ -2,26 +2,29 @@ name: arm Toolchain
 
 on: [push, pull_request, workflow_dispatch]
 
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
   arm:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         targets: [
           # https://go.dev/doc/install/source#environment
-          [arm-linux-gnueabihf],
-          [armv8l-linux-gnueabihf],
-          [arm-linux-gnueabi],
-          [armeb-linux-gnueabihf],
-          [armeb-linux-gnueabi]
+          arm-linux-gnueabihf, # linaro
+          armv8l-linux-gnueabihf, # linaro
+          arm-linux-gnueabi, # linaro
+          armeb-linux-gnueabihf, # linaro
+          armeb-linux-gnueabi # linaro
         ]
       fail-fast: false
-    env:
-      TARGET: ${{ matrix.targets[0] }}
+    name: Linux • Toolchain ${{ matrix.targets }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: make --directory=ci ${TARGET}_build
-    - name: Test
-      run: make --directory=ci ${TARGET}_test
+    - name: Build env stage
+      run: make --directory=ci ${{ matrix.targets }}_env
+    - name: Build devel stage
+      run: make --directory=ci ${{ matrix.targets }}_devel
+    - name: Build build stage
+      run: make --directory=ci ${{ matrix.targets }}_build
+    - name: Build Test stage
+      run: make --directory=ci ${{ matrix.targets }}_test
