--- a/.github/workflows/powerpc_toolchain.yml
+++ b/.github/workflows/powerpc_toolchain.yml
@@ -2,28 +2,32 @@ name: powerpc Toolchain
 
 on: [push, pull_request, workflow_dispatch]
 
+# Building using the github runner environement directly.
 jobs:
-  # Building using the github runner environement directly.
   powerpc:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         targets: [
           # https://go.dev/doc/install/source#environment
-          [ppc], # alias
-          [ppc-440fp],
-          # [ppc-e500mc], # TODO(mizux) To fix
-          [ppc64], # OCI alias
-          [ppc64le], # OCI alias
-          [ppc64-power8],
-          [ppc64le-power8],
+          ppc, # alias to ppc-440fp
+          ppc-440fp, # bootlin
+          # [ppc-e500mc], # bootlin TODO(mizux) To fix
+
+          ppc64, # alias to ppc64-power8
+          ppc64le, # alias ppc64le-power8
+          ppc64-power8, # bootlin
+          ppc64le-power8, # bootlin
         ]
       fail-fast: false
-    env:
-      TARGET: ${{ matrix.targets[0] }}
+    name: Linux • Toolchain ${{ matrix.targets }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: make --directory=ci ${TARGET}_build
-    - name: Test
-      run: make --directory=ci ${TARGET}_test
+    - name: Build env stage
+      run: make --directory=ci ${{ matrix.targets }}_env
+    - name: Build devel stage
+      run: make --directory=ci ${{ matrix.targets }}_devel
+    - name: Build build stage
+      run: make --directory=ci ${{ matrix.targets }}_build
+    - name: Build Test stage
+      run: make --directory=ci ${{ matrix.targets }}_test
