toolchain: Add armv7-eabihf and armebv7-eabihf

--- a/.github/workflows/aarch64_toolchain.yml
+++ b/.github/workflows/aarch64_toolchain.yml
@@ -10,6 +10,7 @@ jobs:
         targets: [
           # https://go.dev/doc/install/source#environment
           arm64, # alias to aarch64
+          arm64be, # alias to aarch64be
           aarch64-linux-gnu, # linaro
           aarch64_be-linux-gnu, # linaro
           aarch64, # bootlin
