--- a/ci/Makefile
+++ b/ci/Makefile
@@ -84,10 +84,12 @@ help:
 	@echo -e "\t\t${BOLD}arm-linux-gnueabi${RESET} (linaro toolchain)"
 	@echo -e "\t\t${BOLD}armeb-linux-gnueabihf${RESET} (linaro toolchain)"
 	@echo -e "\t\t${BOLD}armeb-linux-gnueabi${RESET} (linaro toolchain)"
-	@echo -e "\t\t${BOLD}aarch64${RESET} (alias: arm64) (bootlin toolchain)"
-	@echo -e "\t\t${BOLD}aarch64be${RESET} (bootlin toolchain)"
 	@echo -e "\t\t${BOLD}aarch64-linux-gnu${RESET} (linaro toolchain)"
 	@echo -e "\t\t${BOLD}aarch64_be-linux-gnu${RESET} (linaro toolchain)"
+	@echo -e "\t\t${BOLD}armv7-eabihf${RESET} (alias: arm) (bootlin toolchain)"
+	@echo -e "\t\t${BOLD}armebv7-eabihf${RESET} (alias: armeb) (bootlin toolchain)"
+	@echo -e "\t\t${BOLD}aarch64${RESET} (alias: arm64) (bootlin toolchain)"
+	@echo -e "\t\t${BOLD}aarch64be${RESET} (alias: arm64be) (bootlin toolchain)"
 	@echo -e "\t\t${BOLD}mips32-r6${RESET} (alias: mips) (codespace toolchain)"
 	@echo -e "\t\t${BOLD}mips64-r6${RESET} (alias: mips64) (codespace toolchain)"
 	@echo -e "\t\t${BOLD}mips32el-r6${RESET} (alias: mipsle) (codespace toolchain)"
@@ -292,7 +294,10 @@ TOOLCHAIN_TARGETS = \
  mipsle mips32el-r6 mips32el-r2 \
  mips64 mips64-r6 mips64-r2 \
  mips64le mips64el-r6 mips64el-r2 \
- arm64 aarch64 aarch64be \
+ arm armv7-eabihf \
+ armeb armebv7-eabihf \
+ arm64 aarch64 \
+ arm64be aarch64be \
  ppc ppc-440fp ppc-e500mc \
  ppc64 ppc64-power8 \
  ppc64le ppc64le-power8 \
