--- a/ci/docker/toolchain/Dockerfile
+++ b/ci/docker/toolchain/Dockerfile
@@ -24,7 +24,10 @@ COPY . .
 ARG TARGET
 ENV TARGET=${TARGET:-unknown}
 
-FROM devel AS build
+FROM devel AS toolchain
+RUN ./tools/cross_compile.sh toolchain
+
+FROM toolchain AS build
 RUN cmake --version
 RUN ./tools/cross_compile.sh build
 
