--- a/.github/workflows/riscv64_docker.yml
+++ b/.github/workflows/riscv64_docker.yml
@@ -4,8 +4,7 @@ name: riscv64 Docker
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  Distros:
-    runs-on: ubuntu-latest
+  docker:
     strategy:
       matrix:
         distro: [
@@ -18,8 +17,8 @@ jobs:
           #ubuntu,
         ]
       fail-fast: false
-    env:
-      DISTRO: riscv64_${{ matrix.distro }}
+    name: riscv64 • ${{ matrix.distro }}
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Set up QEMU
@@ -29,19 +28,19 @@ jobs:
         docker info
         docker buildx ls
     - name: Build env image
-      run: make --directory=ci ${DISTRO}_env
+      run: make --directory=ci riscv64_${{ matrix.distro }}_env
     - name: Build devel project
-      run: make --directory=ci ${DISTRO}_devel
+      run: make --directory=ci riscv64_${{ matrix.distro }}_devel
     - name: Build project
-      run: make --directory=ci ${DISTRO}_build
+      run: make --directory=ci riscv64_${{ matrix.distro }}_build
     - name: Test project
-      run: make --directory=ci ${DISTRO}_test
+      run: make --directory=ci riscv64_${{ matrix.distro }}_test
 
     - name: Build install env image
-      run: make --directory=ci ${DISTRO}_install_env
+      run: make --directory=ci riscv64_${{ matrix.distro }}_install_env
     - name: Build install devel project
-      run: make --directory=ci ${DISTRO}_install_devel
+      run: make --directory=ci riscv64_${{ matrix.distro }}_install_devel
     - name: Build install project
-      run: make --directory=ci ${DISTRO}_install_build
+      run: make --directory=ci riscv64_${{ matrix.distro }}_install_build
     - name: Test install project
-      run: make --directory=ci ${DISTRO}_install_test
+      run: make --directory=ci riscv64_${{ matrix.distro }}_install_test
