--- a/.github/workflows/arm64_docker.yml
+++ b/.github/workflows/arm64_docker.yml
@@ -11,8 +11,8 @@ jobs:
           almalinux,
           alpine,
           debian,
-          fedora,
-          opensuse,
+          #fedora, # timeout
+          #opensuse, # timeout
           rockylinux,
           ubuntu
         ]
