--- a/.github/workflows/arm64_macos.yml
+++ b/.github/workflows/arm64_macos.yml
@@ -1,5 +1,5 @@
 # ref: https://github.com/actions/runner-images
-name: amd64 Linux
+name: arm64 MacOS
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -7,45 +7,40 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   native:
     strategy:
-       matrix:
-         cmake: [
-           {generator: "Unix Makefiles", config: "Release"},
-           {generator: "Ninja", config: "Release"},
-           {generator: "Ninja Multi-Config", config: "Release"},
-         ]
-       fail-fast: false
-    name: Linux • ${{ matrix.cmake.generator }}
-    runs-on: ubuntu-latest
+      matrix:
+        cmake: [
+          {generator: "Xcode", config: Release, build_target: ALL_BUILD, test_target: RUN_TESTS, install_target: install},
+          {generator: "Unix Makefiles", config: Release, build_target: all, test_target: test, install_target: install},
+        ]
+      fail-fast: false
+    name: MacOS • ${{ matrix.cmake.generator }}
+    runs-on: macos-latest # macos M1 based runner
     steps:
       - uses: actions/checkout@v4
-      - name: Install Ninja
-        run: |
-          sudo apt-get update
-          sudo apt-get install ninja-build
       - name: Check cmake
         run: cmake --version
       - name: Configure
         run: >
           cmake -S. -Bbuild
           -G "${{ matrix.cmake.generator }}"
-          -DCMAKE_BUILD_TYPE="$BUILD_TYPE"
+          -DCMAKE_BUILD_TYPE=${{ matrix.cmake.config }}
           -DCMAKE_INSTALL_PREFIX=install
       - name: Build
         run: >
           cmake --build build
           --config ${{ matrix.cmake.config }}
-          --target all
+          --target ${{ matrix.cmake.build_target }}
           -v -j2
       - name: Test
         run: >
           CTEST_OUTPUT_ON_FAILURE=1
           cmake --build build
           --config ${{ matrix.cmake.config }}
-          --target test
+          --target ${{ matrix.cmake.test_target }}
           -v
       - name: Install
         run: >
           cmake --build build
           --config ${{ matrix.cmake.config }}
-          --target install
+          --target ${{ matrix.cmake.install_target }}
           -v
