--- a/cmake/CMakeCppConfig.cmake.in
+++ b/cmake/CMakeCppConfig.cmake.in
@@ -1,6 +1,8 @@
 # CMakeCpp CMake configuration file
 
-#include(CMakeFindDependencyMacro)
-#find_dependency(Foo REQUIRED NO_MODULE)
+include(CMakeFindDependencyMacro)
+find_dependency(ZLIB REQUIRED NO_MODULE)
+find_dependency(absl REQUIRED NO_MODULE)
+find_dependency(Protobuf REQUIRED NO_MODULE)
 
 include("${CMAKE_CURRENT_LIST_DIR}/CMakeCppTargets.cmake")
