--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,25 @@
+# Project Files unneeded by docker
 .dockerignore
 
-# Project Files unneeded by docker
 .git
 .gitignore
 .github
 .clang-format
 
-ci/Makefile
+# CMake
+cmake/docs
+cmake/README.md
+
 ci/docker
 ci/docs
 ci/cache
-ci/export
+ci/Makefile
 
 AUTHORS
-CONTRIBUTING.md
 CONTRIBUTORS
 LICENSE
 README.md
-doc
+CONTRIBUTING.md
 
 # Native cmake build
 build/
