src code rework
use LOG(INFO) instead of std::cout

--- a/FooBar/CMakeLists.txt
+++ b/FooBar/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_library(FooBar OBJECT)
-
 target_sources(FooBar
   PRIVATE
     include/foobar/FooBar.hpp
@@ -7,8 +6,6 @@ target_sources(FooBar
 target_include_directories(FooBar
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../Bar/include>
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../Foo/include>
     $<INSTALL_INTERFACE:include>)
 target_compile_features(FooBar PUBLIC cxx_std_20)
 set_target_properties(FooBar PROPERTIES
@@ -16,13 +13,13 @@ set_target_properties(FooBar PROPERTIES
   PUBLIC_HEADER include/foobar/FooBar.hpp)
 # note: macOS is APPLE and also UNIX !
 if(APPLE)
-  set_target_properties(FooBar PROPERTIES
-    INSTALL_RPATH "@loader_path")
+  set_target_properties(FooBar PROPERTIES INSTALL_RPATH "@loader_path")
 elseif(UNIX)
   set_target_properties(FooBar PROPERTIES
     POSITION_INDEPENDENT_CODE ON
     INSTALL_RPATH "$ORIGIN")
 endif()
+target_link_libraries(FooBar PRIVATE absl::log Bar Foo)
 add_library(${PROJECT_NAMESPACE}::FooBar ALIAS FooBar)
 
 add_subdirectory(tests)
