--- a/FooBarApp/CMakeLists.txt
+++ b/FooBarApp/CMakeLists.txt
@@ -1,14 +1,13 @@
 add_executable(FooBarApp)
-target_sources(FooBarApp
-  PRIVATE
-    src/main.cpp)
-target_include_directories(FooBarApp
-  PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../FooBar/include>
+target_sources(FooBarApp PRIVATE src/main.cpp)
+target_include_directories(FooBarApp PRIVATE
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 target_compile_features(FooBarApp PRIVATE cxx_std_20)
 set_target_properties(FooBarApp PROPERTIES
-  VERSION ${PROJECT_VERSION})
+  VERSION ${PROJECT_VERSION}
+  POSITION_INDEPENDENT_CODE ON
+)
 # note: macOS is APPLE and also UNIX !
 if(APPLE)
   set_target_properties(FooBarApp PROPERTIES
@@ -17,7 +16,17 @@ elseif(UNIX AND NOT APPLE)
   set_target_properties(FooBarApp PROPERTIES
     INSTALL_RPATH "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")
 endif()
-target_link_libraries(FooBarApp PRIVATE Full)
+target_link_libraries(FooBarApp PRIVATE
+  absl::flags
+  absl::flags_parse
+  absl::log
+  absl::log_globals
+  absl::log_initialize
+  absl::log_severity
+  absl::strings
+  protobuf::libprotobuf
+  CMakeCpp::Full
+)
 
 add_executable(${PROJECT_NAMESPACE}::FooBarApp ALIAS FooBarApp)
 
