--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Foo OBJECT)
+add_library(Foo)
 target_sources(Foo
   PRIVATE
     include/foo/Foo.hpp
@@ -12,13 +12,22 @@ set_target_properties(Foo PROPERTIES
   VERSION ${PROJECT_VERSION}
   POSITION_INDEPENDENT_CODE ON
   PUBLIC_HEADER include/foo/Foo.hpp)
+if(APPLE)
+  set_target_properties(Foo PROPERTIES INSTALL_RPATH "@loader_path")
+elseif(UNIX)
+  set_target_properties(Foo PROPERTIES INSTALL_RPATH "$ORIGIN")
+endif()
 target_link_libraries(Foo PRIVATE absl::log)
 add_library(${PROJECT_NAMESPACE}::Foo ALIAS Foo)
 
 add_subdirectory(tests)
 
 # Install
+include(GNUInstallDirs)
 install(TARGETS Foo
   EXPORT ${PROJECT_NAME}Targets
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
-  )
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  #RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
