ci: rework web jobs

--- a/ci/docker/web/Dockerfile
+++ b/ci/docker/web/Dockerfile
@@ -1,9 +1,11 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/archlinux/
 FROM archlinux:latest AS env
+
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN pacman -Syu --noconfirm git base-devel cmake
+RUN pacman -Syu --noconfirm git base-devel glibc cmake
+RUN cmake -version
 RUN pacman -Syu --noconfirm nodejs emscripten
 ENV PATH=/usr/lib/emscripten:$PATH
 RUN emcc -v
@@ -14,9 +16,9 @@ WORKDIR /home/project
 COPY . .
 
 FROM devel AS build
-RUN cmake --version
 RUN emcmake cmake -S. -Bbuild -DCMAKE_BUILD_TYPE=Release
 RUN cmake --build build --target all -v
+#RUN cmake --build build --target install -v
 
 FROM build AS test
 #RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test
