--- a/ci/Makefile
+++ b/ci/Makefile
@@ -22,7 +22,7 @@ help:
 	@echo -e "\t${BOLD}save_<distro>_<stage>${RESET}: Save a <stage> docker image for a specific distro."
 	@echo -e "\t${BOLD}sh_<distro>_<stage>${RESET}: run a container using the <stage> docker image specified (debug purpose)."
 	@echo -e "\t${BOLD}clean_<distro>_<stage>${RESET}: Remove a <stage> docker image for a specific distro."
-	@echo -e "\t${BOLD}clean_native${RESET}: Remove ALL caches and docker images."
+	@echo -e "\t${BOLD}clean_all${RESET}: Remove ALL caches and docker images."
 	@echo
 	@echo -e "\tWith ${BOLD}<distro>${RESET}:"
 	@echo -e "\t\t${BOLD}almalinux${RESET} (latest)"
