--- a/.github/workflows/amd64_web_cmake.yml
+++ b/.github/workflows/amd64_web_cmake.yml
@@ -1,7 +1,11 @@
 # ref: https://github.com/docker-library/official-images
-name: amd64 Web
+name: amd64 Web CMake
 
 on: [push, pull_request, workflow_dispatch]
+
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
 
 jobs:
   Distros:
