--- a/.github/workflows/s390x_toolchain_cmake.yml
+++ b/.github/workflows/s390x_toolchain_cmake.yml
@@ -1,7 +1,11 @@
 # ref: https://toolchains.bootlin.com/
-name: s390x Toolchain
+name: s390x Toolchain CMake
 
 on: [push, pull_request, workflow_dispatch]
+
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
 
 # Building using the github runner environement directly.
 jobs:
@@ -13,17 +17,17 @@ jobs:
           s390x, # bootlin
         ]
       fail-fast: false
-    name: Linux • Toolchain ${{ matrix.targets }}
+    name: Linux•Toolchain ${{matrix.targets}}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: Build env stage
-      run: make --directory=ci toolchain_${{ matrix.targets }}_env
+      run: make --directory=ci toolchain_${{matrix.targets}}_env
     - name: Build devel stage
-      run: make --directory=ci toolchain_${{ matrix.targets }}_devel
+      run: make --directory=ci toolchain_${{matrix.targets}}_devel
     - name: Build toolchain stage
-      run: make --directory=ci toolchain_${{ matrix.targets }}_toolchain
+      run: make --directory=ci toolchain_${{matrix.targets}}_toolchain
     - name: Build build stage
-      run: make --directory=ci toolchain_${{ matrix.targets }}_build
+      run: make --directory=ci toolchain_${{matrix.targets}}_build
     - name: Build Test stage
-      run: make --directory=ci toolchain_${{ matrix.targets }}_test
+      run: make --directory=ci toolchain_${{matrix.targets}}_test
