--- a/ci/docker/toolchain/Dockerfile
+++ b/ci/docker/toolchain/Dockerfile
@@ -4,8 +4,11 @@ FROM ubuntu:latest AS env
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN apt-get update -qq \
-&& DEBIAN_FRONTEND=noninteractive apt-get install -yq git wget libssl-dev build-essential \
- ninja-build python3 python3-venv pkgconf libglib2.0-dev \
+&& DEBIAN_FRONTEND=noninteractive apt-get install -yq \
+ git wget libssl-dev \
+ build-essential ninja-build \
+ python3 python3-venv \
+ pkgconf libglib2.0-dev \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ENTRYPOINT ["/usr/bin/bash", "-c"]
