--- a/.github/workflows/riscv64_toolchain_cmake.yml
+++ b/.github/workflows/riscv64_toolchain_cmake.yml
@@ -31,3 +31,9 @@ jobs:
       run: make --directory=ci toolchain_${{matrix.targets}}_build
     - name: Build Test stage
       run: make --directory=ci toolchain_${{matrix.targets}}_test
+
+  riscv64_toolchain_cmake:
+    runs-on: ubuntu-latest
+    needs: riscv64
+    steps:
+      - uses: actions/checkout@v5
