re2 is a dependency of protobuf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,11 +85,11 @@ message(STATUS "Build ZLIB: ${BUILD_ZLIB}")
 option(BUILD_absl "Build the abseil-cpp dependency Library" ON)
 message(STATUS "Build abseil-cpp: ${BUILD_absl}")
 
+option(BUILD_re2 "Build the RE2 dependency Library" ON)
+message(STATUS "Build re2: ${BUILD_re2}")
+
 option(BUILD_Protobuf "Build the Protobuf dependency Library" ON)
 message(STATUS "Build protobuf: ${BUILD_Protobuf}")
-
-option(BUILD_re2 "Build the re2 dependency Library" ON)
-message(STATUS "Build re2: ${BUILD_re2}")
 
 if(BUILD_TESTING)
   option(BUILD_googletest "Build googletest" ON)
