cmake: add add_cxx_test function

--- a/Bar/tests/CMakeLists.txt
+++ b/Bar/tests/CMakeLists.txt
@@ -2,24 +2,16 @@ if(NOT BUILD_TESTING)
   return()
 endif()
 
-add_executable(bar_test)
-target_sources(bar_test PRIVATE bar_test.cpp)
-target_include_directories(bar_test PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
-target_compile_features(bar_test PRIVATE cxx_std_20)
-set_target_properties(bar_test PROPERTIES
-  VERSION ${PROJECT_VERSION}
-  POSITION_INDEPENDENT_CODE ON
-)
-if(APPLE)
-  set_target_properties(bar_test PROPERTIES
-    INSTALL_RPATH "@loader_path/../${CMAKE_INSTALL_LIBDIR};@loader_path")
-elseif(UNIX)
-  set_target_properties(bar_test PROPERTIES
-    INSTALL_RPATH "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}:$ORIGIN")
-endif()
-target_link_libraries(bar_test PRIVATE
-  GTest::gtest_main
-  ${PROJECT_NAMESPACE}::Bar)
-
-add_test(NAME bar_test COMMAND bar_test)
+file(GLOB CPP_SRCS "*.cpp")
+foreach(_TEST_FILE IN LISTS CPP_SRCS)
+  get_filename_component(_NAME ${_TEST_FILE} NAME_WE)
+  get_filename_component(_FILE_NAME ${_TEST_FILE} NAME)
+  add_cxx_test(
+    NAME
+      ${_NAME}
+    SOURCES
+      ${_FILE_NAME}
+    LINK_LIBRARIES
+      ${PROJECT_NAMESPACE}::Bar
+  )
+endforeach()
